unpackaged/main/default/objects/zkmulti__MCQueued_Customs_Item__c/zkmulti__MCQueued_Customs_Item__c.object-meta.xml
<CustomObject>
    <label>Queued Customs Item</label>
    <nameField>
        <displayFormat>Queued-Customs-Item-{0000000}</displayFormat>
        <label>Queued Customs Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queued Customs Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>