unpackaged/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Queued_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Queued_Shipment__c</fullName>
    <label>Queued Shipment</label>
    <referenceTo>zkmulti__MCQueued_Shipment__c</referenceTo>
    <relationshipName>Queued_Customs_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>