unpackaged/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Value__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Value__c</fullName>
    <label>Value</label>
    <precision>17</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>