unpackaged/main/default/objects/zkmulti__MCQueued_Customs_Item__c/fields/zkmulti__Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Value_Currency__c</fullName>
    <label>Value Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>